feat(component): add network and platform api for decentralized
